@@ -1,6 +1,11 @@
 [2015-11-xx]
 Version 0.7.5 UNRELEASED
 
+- Bug fixes:
+
+  * [cmdline] Print version of provider of virtual package in conflicts/broken
+    (Closes: #802943)
+
 
 [2015-10-16]
 Version 0.7.4
